--- a/Frontend/fun.html
+++ b/Frontend/fun.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
+  <br><br><br>
 <h1 align="center "><font color="#5c8a8a">Enter any image of your choice<br>and you will get to know what it is!!</font></h1>
 <center>
 <select id="id_one" onchange="show_hide_cancer()" class="button">
@@ -29,19 +30,20 @@
   <h2 id="demo"></h2>
   <table align="center">
     <td height="50%" width="100%">
-    <h3><div id="status" class="status height" align="center"> </div></h3>
-    <h3><div id="status1" class="status height" align="center"> </div></h3>
-    <h3><div id="status2" class="status height" align="center"> </div></h3>
-    <h3><div id="status3" class="status height" align="center"> </div></h3>
-    <h3><div id="status4" class="status height" align="center"> </div></h3>
-    <h3><div id="status5" class="status height" align="center"> </div></h3>
+    <h3><font color="#5c8a8a"><div id="status" class="status height" align="center"> </div></font></h3>
+    <h3><font color="#5c8a8a"><div id="status1" class="status height" align="center"> </div></font></h3>
+    <h3><font color="#5c8a8a"><div id="status2" class="status height" align="center"> </div></font></h3>
+    <h3><font color="#5c8a8a"><div id="status3" class="status height" align="center"> </div></font></h3>
+    <h3><font color="#5c8a8a"><div id="status4" class="status height" align="center"> </div></font></h3>
     <br>
 
-      <h3><div id="result"> </div></h3>
+      <h3><font color="#5c8a8a"><div id="result"> </div></font></h3>
   </td>
+  <br>
  </table>
-<br>
-<div id="map-canvas"></div>
+ <br>
+ <a href="checkup.html"><button class="button">Home</button></a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </center>
 <center><h3><div id="warning" class="status height" align="center"> </div></h3></center>
 
