--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -99,7 +99,7 @@ h1,h2,h3{
         <ul class="navbar-nav">
           <li class="nav-item">
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">About</a>
+            <a class="nav-link js-scroll" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#service">Blogs</a>
