--- a/Frontend/retino.html
+++ b/Frontend/retino.html
@@ -31,12 +31,12 @@
   <h2 id="demo"></h2>
   <table align="center">
     <td height="50%" width="100%">
-    <h3><div id="status" class="status height" align="center"> </div></h3>
-    <h3><div id="status1" class="status height" align="center"> </div></h3>
-    <h3><div id="status2" class="status height" align="center"> </div></h3>
-    <h3><div id="status3" class="status height" align="center"> </div></h3><br>
+    <h3><font color="#5c8a8a"><div id="status" class="status height" align="center"> </div></font></h3>
+    <h3><font color="#5c8a8a"><div id="status1" class="status height" align="center"> </div></font></h3>
+    <h3><font color="#5c8a8a"><div id="status2" class="status height" align="center"> </div></font></h3>
+    <h3><font color="#5c8a8a"><div id="status3" class="status height" align="center"> </div></font></h3><br>
 
-      <h3><div id="result"> </div></h3>
+      <h3><font color="#5c8a8a"><div id="result"> </div></font></h3>
   </td>
  </table>
 <br>
