--- a/Frontend/checkup.html
+++ b/Frontend/checkup.html
@@ -29,7 +29,7 @@ body, html {
 
 body {
   /* The image used */
-  background-image: url("bg1.gif");
+  background-image: url("./img/bg1.gif");
 
   /* Full height */
   height: 100%; 
