--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AIQURE</title>
+  <title>MedicureAI</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -134,7 +134,7 @@ h1,h2,h3{
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Diesease Detection using Medical AI for</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Malaria,Brain Tumor,Pneumonia,Optical Coherence Retinopathy,Diabetes Retinopathy,Invasive Ductal Carcinoma for Breast Cancer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Brain Tumor,Pneumonia,Optical Coherence Tomography,Diabetes Retinopathy,Invasive Ductal Carcinoma,Malaria</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
         <a href="checkup.html"><button class="button button1">Enter the App</button></a>
@@ -149,7 +149,7 @@ h1,h2,h3{
             <div class="copyright-box">
               <br>
               <br>
-              <p class="copyright text">&copy; Credits <strong>Saugata Paul - Deep Learning</strong><strong>&nbsp;&&nbsp;UI Suvhradip Ghosh</strong>.<br>All Rights Reserved</p>
+              <p class="copyright text">&copy; Credits <strong>Deep Learning & Deployment - <a class="text" href="https://github.com/saugatapaul1010">Saugata Paul</a></strong><br><strong>User Interface - <a class="text" href="https://github.com/suvhradipghosh07">Suvhradip Ghosh</a></strong>.<br>All Rights Reserved</p>
             </div>
           </div>
         </div>
