--- a/Frontend/checkup.html
+++ b/Frontend/checkup.html
@@ -102,13 +102,13 @@ h1{
           <b>Optical Coherence Tomography</b></button></a>
           <br><br>
           <a href="retino.html"><button class="button button1"><i class="fas fa-brain"></i>
-          <b>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp; &nbsp;Diabetes Retinopathy  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></button></a>
+          <b>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp; &nbsp;Diabetes Retinopathy Analysis &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></button></a>
           <br><br>
           <a href="cancer.html"><button class="button button1"><i class="fas fa-brain"></i>
-          <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Breast Cancer Analysing&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></button></a>
+          <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Breast Cancer Analysis&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></button></a>
           <br><br>
           <a href="fun.html"><button class="button button1"><i class="fas fa-brain"></i>
-          <b>Click for Random Object Detection</b></button></a>
+          <b>Click here for Random Object Detection</b></button></a>
           <br><br>
           <a href="index.html"><button class="button button1"><i class="fas fa-brain"></i>
           <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Back to main page&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></button></a>
