--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -118,7 +118,7 @@ h1,h2,h3{
             <a class="nav-link js-scroll" href="#work">Future Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#contact">Feedback</a>
+            <a class="nav-link js-scroll" href="https://forms.gle/ZMKHwDrNH3FNek6d6">Feedback</a>
           </li>
         </ul>
       </div>
