--- a/Frontend/brain.html
+++ b/Frontend/brain.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <br><br>
-<h1 align="center "><font color="#5c8a8a">A Medical application for Detecting<br>Brain Tumor using MRI Scans</font></h1>
+<h1 align="center "><font color="#5c8a8a">Detecting Brain Tumor using MRI scans</font></h1>
 <center>
   <br><br>
 <select id="id_one" onchange="show_hide_cancer()" class="button">
