--- a/Frontend/fun.html
+++ b/Frontend/fun.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <br><br><br>
-<h1 align="center "><font color="#5c8a8a">Enter any image of your choice<br>and you will get to know what it is!!</font></h1>
+<h1 align="center "><font color="#5c8a8a">Enter any random image of your choice<br>and you will get to know what it is!!</font></h1>
 <center>
 <select id="id_one" onchange="show_hide_cancer()" class="button">
   <option value="fun">Upload any image!</option>
@@ -26,8 +26,9 @@
   <div class="gif">
   <img src="./img/pht.gif" id="blah" class="demo">
   </div>
+  <br>
  <!-- <h5 id="Analysing"></h5> -->
-  <h2 id="demo"></h2>
+  <h2 id="demo" class="under"></h2>
   <table align="center">
     <td height="50%" width="100%">
     <h3><font color="#5c8a8a"><div id="status" class="status height" align="center"> </div></font></h3>
