--- a/Frontend/oct.html
+++ b/Frontend/oct.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <br><br>
-<h1 align="center "><font color="#5c8a8a">Detecting<br>Retinal Dieseases using Optical Coherence Tomography Images</font></h1>
+<h1 align="center "><font color="#5c8a8a">Detecting Retinal Dieseases using <br>Optical Coherence Tomography Images</font></h1>
 <center>
   <br><br>
 <select id="id_one" onchange="show_hide_cancer()" class="button">
