--- a/Frontend/cancer.html
+++ b/Frontend/cancer.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
-<h1 align="center "><font color="#5c8a8a">Detecting<br>Invasive Ductal Carcinoma using Images</font></h1>
+<h1 align="center "><font color="#5c8a8a">Detecting Invasive Ductal Carcinoma <br>using breast histopathology images</font></h1>
 <center>
 <select id="id_one" onchange="show_hide_cancer()" class="button">
   <option value="breast">Upload Breast Histopathology Images</option>
