--- a/Frontend/retino.html
+++ b/Frontend/retino.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <br><br>
-<h1 align="center "><font color="#5c8a8a">Detecting<br>Diabetes Retinopathy using Retinal Images</font></h1>
+<h1 align="center "><font color="#5c8a8a">Detecting Diabetes Retinopathy using Retinal Images</font></h1>
 <center>
   <br><br>
 <select id="id_one" onchange="show_hide_cancer()" class="button">
