Foxed issues related to title.

--- a/Frontend/checkup.html
+++ b/Frontend/checkup.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Check up</title>
+  <title>Check up home page</title>
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -108,7 +108,7 @@ h1{
           <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Breast Cancer Analysis&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></button></a>
           <br><br>
           <a href="fun.html"><button class="button button1"><i class="fas fa-brain"></i>
-          <b>Click for Random Object Detection</b></button></a>
+          <b>Random Object Detection</b></button></a>
           <br><br>
           <a href="index.html"><button class="button button1"><i class="fas fa-brain"></i>
           <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Back to main page&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></button></a>
