--- a/Frontend/pnm.html
+++ b/Frontend/pnm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pneumonia</title>
+  <title>Pneumonia Detection</title>
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
   <script src="js/pnm.js"></script>
