--- a/Frontend/retino.html
+++ b/Frontend/retino.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RCT</title>
+  <title>Diabetes Retinopathy</title>
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
   <script src="js/dia.js"></script>
