--- a/Frontend/oct.html
+++ b/Frontend/oct.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OCT</title>
+  <title>Optical Coherence Tomography</title>
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
   <script src="js/oct.js"></script>
